# aceMementoExper

./: eval_playbook.py  llm.py  pyproject.toml  run_deepresearcher_memento.py  utils.py
375/: case_bank.jsonl
375/logs/: generator_initial_s100_20260706_082919_705.json  generator_initial_s101_20260706_082922_499.json  generator_initial_s102_20260706_082924_371.json  generator_initial_s103_20260706_082923_408.json  generator_initial_s104_20260706_082937_187.json  generator_initial_s105_20260706_082929_245.json  generator_initial_s106_20260706_082931_465.json  generator_initial_s107_20260706_082932_566.json  generator_initial_s108_20260706_082945_783.json  generator_initial_s109_20260706_082936_314.json  generator_initial_s10_20260706_082543_008.json  generator_initial_s110_20260706_082938_928.json  generator_initial_s111_20260706_082942_063.json  generator_initial_s112_20260706_082945_892.json  generator_initial_s113_20260706_082944_564.json  generator_initial_s114_20260706_083004_416.json  generator_initial_s115_20260706_082950_159.json  generator_initial_s116_20260706_082950_551.json  generator_initial_s117_20260706_082953_957.json  generator_initial_s118_20260706_082953_407.json  generator_initial_s119_20260706_083000_129.json  generator_initial_s11_20260706_082540_480.json  generator_initial_s120_20260706_083016_071.json  generator_initial_s121_20260706_083001_784.json  generator_initial_s122_20260706_083005_126.json  generator_initial_s123_20260706_083008_041.json  (+416 more)
ace/: ace.py
ace_memento/: compat.py  runner.py
tutorials/: ExtendingDatasets.md
(+2124 files in other folders)
